--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
 APP_DOMAIN=127.0.0.1:8000
-DB_DATABASE="ecom"
-DB_USERNAME="root"
-DB_PASSWORD="root"
+DB_DATABASE="db_name"
+DB_USERNAME="db_user"
+DB_PASSWORD="db_password"
