--- a/.env.server
+++ b/.env.server
@@ -1,4 +1,4 @@
-APP_DOMAIN="shokherbazar.com"
-DB_DATABASE="shokherbazar"
-DB_USERNAME="shokherbazar"
-DB_PASSWORD="shokherbazar_password"
+APP_DOMAIN="example.com"
+DB_DATABASE="example"
+DB_USERNAME="example"
+DB_PASSWORD="example_password"
